# cbor-ld

./: Cargo.toml  README.md
src/: contexts.rs  diagnostic.rs  encoders.rs  id_alloc.rs  keywords.rs  lib.rs  transform.rs  truage.rs  utils.rs
src/codecs/: cryptosuite.rs  id.rs  mod.rs  multibase.rs  vocab.rs  xsd_date.rs  xsd_date_time.rs
src/codecs/iri/: data.rs  did.rs  http.rs  mod.rs  url.rs  urn.rs
src/decode/: error.rs  mod.rs
src/encode/: error.rs  mod.rs
src/id/: map.rs  mod.rs
src/tables/: mod.rs  registry.rs
tests/: cit.jsonld  common.rs  config.toml  didKey.jsonld  prc.jsonld  suite.rs  trueage.cbor.hex
tests/contexts/citizenship/utopia/: v1
tests/samples/: barecode.jsonld  cit.jsonld  didKey.jsonld  note.cbor.hex  note.jsonld  prc.cbor.hex  prc.jsonld  truage.cbor.hex  trueage.jsonld  uncompressible.jsonld  vcb-aamva.cbor.hex  vcb-mrz.cbor.hex
