[package]
name = "cbor-ld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
base64 = "0.12"
bincode = "1.3.3"
bs58 = { version = "0.4", features = ["check"] }
combination = "0.1"
futures = "0.3"
iref = "^2.0.3"
json = "^0.12"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.7"
serde_cbor = "0.11.2"
serde_derive = "1.0.139"
serde_jcs = "0.1"
serde_json = "1.0"
thiserror = "1.0"
uuid = "0.8.0"
difference = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }