[package]
name = "cbor-ld"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cbor-ld"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["clap", "env_logger", "json-ld/reqwest", "iref/serde", "hex"]

[dependencies]
log = "0.4.21"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
iref = "3.1.4"
static-iref = "3.0.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"
json-ld = "0.19"
xsd-types = "0.9.4"
thiserror = "1.0"
multibase = "0.9.1"
uuid = "1.8.0"
chrono = "0.4.38"

# bin dependencies.
env_logger = { version = "0.11.3", optional = true }
clap = { version = "4.5.7", features = ["derive"], optional = true }
hex = { version = "0.4.3", optional = true }
toml = "0.8.14"

[dev-dependencies]
json-ld = { version = "0.19", features = ["reqwest"] }
yansi = "1.0.1"
json-syntax = "0.12.4"
hex = "0.4.3"